<resources>
    <string name="app_name">My Jims</string>
    <string name="title_activity_main_">My Jims</string>

    <!--contact-->
    <string name="address">48/4 Knowledge Park III,Greater Noida, UP-201308</string>

    <string name="ph1">9953868147</string>
    <string name="ph2">9870280081</string>
    <string name="ph3">8826257689</string>
    <string name="ph4">0120–3819700</string>

    <string name="fax">0120–3819704</string>
    <string name="email">admission.gn@jagannath.org</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
