<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chaostools.ansh.Myjims.MainActivityFragments.ContactFrag">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="700dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                contentPadding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/color_orange"

                app:cardCornerRadius="5dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/address"
                        android:text="Address"
                        android:textColor="@color/color_white"
                        android:textSize="17dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/address_l"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:autoLink="map"
                        android:linksClickable="true"
                        android:text="@string/address"
                        android:textColor="@color/color_white"
                        android:textColorLink="@color/color_white"
                        android:textSize="14dp"
                        android:textStyle="italic" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                contentPadding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/color_orange"
                app:cardCornerRadius="5dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/contact"
                        android:text="Contact"
                        android:textColor="@color/color_white"
                        android:textSize="17dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/cont_l"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:autoLink="phone"
                        android:linksClickable="true"
                        android:text="@string/ph1"
                        android:textColor="@color/color_white"
                        android:textColorLink="@color/color_white"
                        android:textSize="14dp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/cont_l2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:autoLink="phone"
                        android:linksClickable="true"
                        android:text="@string/ph2"
                        android:textColor="@color/color_white"
                        android:textColorLink="@color/color_white"
                        android:textSize="14dp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/cont_l3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:autoLink="phone"
                        android:text="@string/ph3"
                        android:linksClickable="true"
                        android:textColor="@color/color_white"
                        android:textColorLink="@color/color_white"
                        android:textSize="14dp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/cont_l4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:autoLink="phone"
                        android:text="@string/ph4"
                        android:linksClickable="true"
                        android:textColor="@color/color_white"
                        android:textColorLink="@color/color_white"
                        android:textSize="14dp"
                        android:textStyle="italic" />


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                contentPadding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_margin="8dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/color_orange"
                app:cardCornerRadius="5dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/email"
                        android:text="Email"
                        android:textColor="@color/color_white"
                        android:textSize="17dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/email_l"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:autoLink="email"
                        android:text="@string/email"
                        android:linksClickable="true"
                        android:textColor="@color/color_white"
                        android:textColorLink="@color/color_white"
                        android:textSize="14dp"
                        android:textStyle="italic" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                contentPadding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/color_orange"
                app:cardCornerRadius="5dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/fax"
                        android:text="Fax"
                        android:textColor="@color/color_white"
                        android:textSize="17dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fax_l"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/fax"
                        android:linksClickable="true"
                        android:textColor="@color/color_white"
                        android:textColorLink="@color/color_white"
                        android:textSize="14dp"
                        android:textStyle="italic" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="200dp"
                android:background="@color/color_grey"
                android:textColor="@color/color_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/lo"
                android:text="from github.com/chaostools"
                android:textColor="@color/color_grey"
                android:textSize="15dp" />


        </LinearLayout>


    </ScrollView>


</FrameLayout>
